# not-a-weapon

./: .gitattributes  .gitignore  CHEATSHEET.md  CLAUDE.md  DESIGN.md  README.md  icon.svg.import  project.godot  pyproject.toml
ai/: README.md  combine_eval.py  smoke.py
assets/: fetch_icons.py
assets/fonts/: JetBrainsMono.ttf.import  ShareTechMono-Regular.ttf.import
assets/icons/: CREDITS.md  _index.txt  anchovies.svg.import  backpack.svg.import  bandages.svg.import  battery_acid.svg.import  bear_trap.svg.import  beehive.svg.import  boombox.svg.import  boomerang.svg.import  brick.svg.import  bug_spray.svg.import  caffeine_pills.svg.import  car_battery.svg.import  chainsaw.svg.import  cheese_grater.svg.import  co2_canister.svg.import  crowbar.svg.import  duct_tape.svg.import  feathers.svg.import  fire_extinguisher.svg.import  fireworks.svg.import  fishing_rod.svg.import  frying_pan.svg.import  gasoline.svg.import  glow_sticks.svg.import  glue.svg.import  grenade.svg.import  (+37 more)
combine/: __init__.py  compile.py  eval.py  grammar.py  harness.py  items.py  llm.py  lucidity.py  resolver.py  schema.py  serve.py
scripts/: gadget.gd  gadget.gd.uid  hud.gd  hud.gd.uid  item.gd  item.gd.uid  item_db.gd  item_db.gd.uid  main.gd  main.gd.uid  pickup.gd  pickup.gd.uid  resolver.gd  resolver.gd.uid
shaders/: fog.gdshader  fog.gdshader.uid  glitch.gdshader  glitch.gdshader.uid
tools/: AGENT.md  README.md  agent_capture.gd  agent_capture.gd.uid  agent_capture.tscn  agent_server.gd  agent_server.gd.uid  agent_server.tscn  capture.ps1  combine_console.html  naw.py  serve.ps1
(+598 files in other folders)
