[project]
name = "not-a-weapon-combine"
version = "0.1.0"
description = "Engine-agnostic combine brain for 'This Is Not A Weapon'."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["combine/tests"]
